src/Map/Map.css
.Map {
    width: 100%;
    height: 100%;
}

.mapboxgl-ctrl-attrib-inner {
    display: none;
}

.legend {
    background-color: #fff;
    border-radius: 3px;
    bottom: 30px;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
    padding: 10px;
    position: relative;
    width: 20%;
    min-width: 90px;
    max-width: 100px;
    left: 2%;
    top: -98%;
    z-index: 1;
}

